# Pong

./: .gitignore  CMakeLists.txt  README.md  makefile
src/: Ball.cpp  GameManager.cpp  Paddle.cpp  main.cpp
src/include/: Ball.h  GameManager.h  Paddle.h
